mule-user-guide/v/3.2/modules-reference.adoc
= Modules Reference

[TIP]
====
*This topic relates to the most recent version of Mule ESB.*
To see the corresponding topic in a previous version of Mule ESB, click MULE2USER:UsingMuleModules[here].
====

Modules are similar to link:https://docs.mulesoft.com/mule-user-guide/v/3.2/connecting-using-transports[transports] in that they provide pluggable functionality, configured via dedicated schema, but they differ in that there is no underlying transport to send or receive data. Following is a list of the default Mule ESB modules.

[%header,cols="10a,90a"]
|===
|Module |Description
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/acegi-module-reference[Acegi Module] |Security via http://www.acegisecurity.org/[Acegi].
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/atom-module-reference[Atom Module] |Support for consuming and creating Atom feeds.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/bpm-module-reference[BPM] |Mule's support for BPM allows you to send/receive messages to/from a running process. A message from Mule can start or advance a process, the message can be stored as a process variable, and a running process can send messages to any endpoint in your Mule application.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/cxf-module-reference[CXF Module] |Mule 3.0 architectural changes bring much better support for CXF, meaning it can be used just like another pipe/filter element.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/using-the-mule-client[Client Module] |MuleClient and the remote dispatcher, giving simple access to the Mule server.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/jaas-module-reference[JAAS Module] |Security via JAAS.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/jboss-transaction-manager-reference[JBoss Transaction Manager] |JBoss transaction support.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/jboss-jbpm-module-reference[jBPM Module] |http://www.jboss.org/jbpm[JBoss jBPM] is an open source BPMS and is well-integrated with Mule. One advantage of jBPM is that it is embedded directly in the Mule runtime, allowing for faster performance.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/jersey-module-reference[Jersey Module] |Support for RESTful web services built using Jersey.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/json-module-reference[JSON Module] |JSON data and binding support.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/mule-agents[Management Module] |Mule agents for server management using JMX.
|OGNL Module |Provides a filter using http://www.ognl.org/[OGNL] expressions. For details, see link:https://docs.mulesoft.com/mule-user-guide/v/3.2/using-filters[Using OGNL Expressions].
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/pgp-security[PGP Module] |Security via PGP.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/saml-module[SAML Module] _*Enterprise Edition*_ |Provides authentication and authorization capabilities to Mule based on the SAML standard. (As of Mule enterprise edition 2.2.3)
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/rss-module-reference[RSS Module] |Support for consuming RSS feeds
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/scripting-module-reference[Scripting Module] |Interface between Mule and scripting languages (currently link:http://groovy-lang.org/[groovy]).
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/spring-extras-module-reference[Spring Extras Module] |Extensions for using the Spring framework with Mule.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/sxc-module-reference[SXC Module] |A very fast streaming XPath router and filter.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.2/xml-module-reference[XML Module] |XML based utilities (mainly filters and routers).
|===
