mule-user-guide/v/3.8/modules-reference.adoc
= Modules Reference
:keywords: anypoint studio, modules

Modules are similar to link:/mule-user-guide/v/3.8/connecting-using-transports[transports] in that they provide pluggable functionality, configured via dedicated schema, but they differ in that there is no underlying transport to send or receive data. Following is a list of the default Mule modules.

[width="100%",cols="50%,50%",options="header",]
|===
|Module |Description
|link:/mule-user-guide/v/3.8/atom-module-reference[Atom Module] |Support for consuming and creating Atom feeds.
|link:/mule-user-guide/v/3.8/bpm-module-reference[BPM] |Mule's support for BPM allows you to send/receive messages to/from a running process. A message from Mule can start or advance a process, the message can be stored as a process variable, and a running process can send messages to any endpoint in your Mule application.
|link:/mule-user-guide/v/3.8/cxf-module-reference[CXF Module] |Mule 3.0 architectural changes bring much better support for CXF, meaning it can be used just like another pipe/filter element.
|link:/mule-user-guide/v/3.8/using-the-mule-client[Client Module] |MuleClient and the remote dispatcher, giving simple access to the Mule server.
|link:/mule-user-guide/v/3.8/jaas-module-reference[JAAS Module] |Security via JAAS.
|link:/mule-user-guide/v/3.8/jboss-transaction-manager-reference[JBoss Transaction Manager] |JBoss transaction support.
|link:/mule-user-guide/v/3.8/jboss-jbpm-module-reference[jBPM Module] |http://www.jboss.org/jbpm[JBoss jBPM] is a best-of-breed open source BPMS and is well-integrated with Mule. One advantage of jBPM is that it is embedded directly in the Mule runtime, allowing for faster performance.
|link:/mule-user-guide/v/3.8/jersey-module-reference[Jersey Module] |Support for RESTful web services built using Jersey.
|link:/mule-user-guide/v/3.8/json-module-reference[JSON Module] |JSON data and binding support.
|link:/mule-user-guide/v/3.8/mule-agents[Management Module] |Mule agents for server management using JMX.
|OGNL Module |Provides a filter using OGNL expressions. +
*Note*: OGNL is deprecated in Mule 3.6 and newer and will be removed in Mule 4.0. 
|link:/mule-user-guide/v/3.8/pgp-security[PGP Module] |Security via PGP.
|link:/mule-user-guide/v/3.8/saml-module[SAML Module] *Enterprise Edition* |Provides authentication and authorization capabilities to Mule based on the SAML standard. (As of Mule Enterprise Edition 2.2.3.)
|link:/mule-user-guide/v/3.8/rss-module-reference[RSS Module] |Support for consuming RSS feeds
|link:/mule-user-guide/v/3.8/scripting-module-reference[Scripting Module] |Interface between Mule and scripting languages (currently link:http://groovy-lang.org/[Groovy]).
|link:/mule-user-guide/v/3.8/spring-extras-module-reference[Spring Extras Module] |Extensions for using the Spring framework with Mule.
|link:/mule-user-guide/v/3.8/sxc-module-reference[SXC Module] |A very fast streaming XPath router and filter.
|link:/mule-user-guide/v/3.8/xml-module-reference[XML Module] |XML based utilities (mainly filters and routers).
|===

== See Also

* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
